--- a/index.html
+++ b/index.html
@@ -96,6 +96,107 @@
                     </div>
                 </div>
             </section>
+            <section class="section-tours">
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">Tours mais populares</h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--1">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading--span card__heading--span-1">Explorador dos mares</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>3 dias de tour</li>
+                                        <li>Até 30 pessoas</li>
+                                        <li>2 guias</li>
+                                        <li>Hotéis confortáveis</li>
+                                        <li>Dificuldade: fácil</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-1">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Somente</p>
+                                        <p class="card__price-value">$1200</p>
+                                    </div>
+                                    <a href="#" class="btn btn-white">Reserve agora!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--2">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading--span card__heading--span-2">Andarilho das florestas</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>7 dias de tour</li>
+                                        <li>Até 40 pessoas</li>
+                                        <li>6 guias</li>
+                                        <li>Tendas fornecidas</li>
+                                        <li>Dificuldade: média</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-2">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Somente</p>
+                                        <p class="card__price-value">$2000</p>
+                                    </div>
+                                    <a href="#" class="btn btn-white">Reserve agora!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture card__picture--3">
+                                    &nbsp;
+                                </div>
+                                <h4 class="card__heading">
+                                    <span class="card__heading--span card__heading--span-3">Aventureiro das neves</span>
+                                </h4>
+                                <div class="card__details">
+                                    <ul>
+                                        <li>5 dias de tour</li>
+                                        <li>Até 15 pessoas</li>
+                                        <li>3 guias</li>
+                                        <li>Tendas fornecidas</li>
+                                        <li>Dificuldade: difícil</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-3">
+                                <div class="card__cta">
+                                    <div class="card__price-box">
+                                        <p class="card__price-only">Somente</p>
+                                        <p class="card__price-value">$3500</p>
+                                    </div>
+                                    <a href="#" class="btn btn-white">Reserve agora!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="" class="btn btn-green">Conheça todos tours</a>
+                </div>
+            </section>
         </main>
     </body>
 </html>
