--- a/index.html
+++ b/index.html
@@ -197,6 +197,57 @@
                     <a href="" class="btn btn-green">Conheça todos tours</a>
                 </div>
             </section>
+            <section class="section-stories">
+                <div class="bg-video">
+                    <video class="bg-video__content" autoplay muted loop>
+                        <source src="img/video.mp4" type="video/mp4">
+                        <source src="img/video.webm" type="video/webm"> 
+                        Your browser is not suported!
+                    </video>
+                </div>
+
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">Nós deixamos as pessoas felizes</h2>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-8.jpg" alt="Pessoa no tour" class="story__image">
+                            <figcaption class="story__caption">
+                                Maria Silva
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading__tertiary u-margin-bottom-small">Eu tiver a melhor semana com minha familia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro amet nisi, pariatur deleniti alias 
+                                corporis similique enim obcaecati eveniet magni perferendis velit, consequuntur rerum ab neque ea 
+                                labore voluptatem! Maiores corporis similique enim obcaecati eveniet magni perferendis velit, 
+                                consequuntur</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="Pessoa no tour" class="story__image">
+                            <figcaption class="story__caption">
+                                João Santos
+                            </figcaption>
+                        </figure>
+                        <div class="story__text">
+                            <h3 class="heading__tertiary u-margin-bottom-small">Uau! Minha vida está completamente diferente agora</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro amet nisi, pariatur deleniti alias 
+                                corporis similique enim obcaecati eveniet magni perferendis velit, consequuntur rerum ab neque ea 
+                                labore voluptatem! Maiores corporis similique enim obcaecati eveniet magni perferendis velit, 
+                                consequuntur</p>
+                        </div>
+                    </div>
+
+                    <div class="u-center-text u-margin-top-huge">
+                        <a href="" class="btn-text">Leia todas histórias</a>
+                    </div>
+            </section>
         </main>
     </body>
 </html>
